Ajout classe container

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Git-Github</title>
 </head>
 <body>
-<h2>Bienvenue dans Git</h2>
-    
+    <div class="container">
+        <h2>Bienvenue dans Git</h2>
+    </div>    
 </body>
 </html>
