troisieme commit branch main

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="container">
         <h2>Bienvenue dans Git</h2>
-    </div>    
+    </div> 
+    <div>Troisieme commit branche main</div>   
 </body>
 </html>
