test branch second commit

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container">
         <h2>Bienvenue dans Git</h2>
     </div>  
-    <div>branche de test first commit</div>  
+    <div>branche de test first commit</div> 
+    <div>branche de test second commit</div> 
 </body>
 </html>
